duniverse/menhirLib.20200211/test/static/bad/unclosed-prologue.mly
%token A B C
%{ let x = 2
%%
foo: A { () }
bar: B { () }
