duniverse/menhirLib.20200211/test/static/bad/unclosed-prologue.exp
File "unclosed-prologue.mly", line 2, characters 0-0:
Error: unbalanced opening brace.
